# desafio-cadastro-das-cartas-no-super-trunfo-Luciano-Pinto

./: CMakeLists.txt  CMakePresets.json  CartasSuperTrunfo  CartasSuperTrunfo.c  cartas  compile_commands.json
SuperTrunfo/include/: dynamic_array.h  interface.h  super_trunfo.h
SuperTrunfo/src/: cartas_super_trunfo.c  dynamic_array.c  interface.c  main.c
include/: dynamic_array.h  interface.h  super_trunfo.h
src/: cartas_super_trunfo.c  dynamic_array.c  interface.c  main.c
